// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./CustomTooltip.stories BottomPlacement 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <button
    aria-label="Tooltip on bottom"
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary mui-style-1bi6f53-MuiButtonBase-root-MuiButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
  >
    Bottom placement
  </button>
</div>
`;

exports[`./CustomTooltip.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <button
    aria-label="This is a tooltip"
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary mui-style-1bi6f53-MuiButtonBase-root-MuiButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
  >
    Hover me
  </button>
</div>
`;

exports[`./CustomTooltip.stories LeftPlacement 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <button
    aria-label="Tooltip on left"
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary mui-style-1bi6f53-MuiButtonBase-root-MuiButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
  >
    Left placement
  </button>
</div>
`;

exports[`./CustomTooltip.stories LongContent 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <button
    aria-label="This is a much longer tooltip that contains more detailed information about a particular feature or functionality."
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary mui-style-1bi6f53-MuiButtonBase-root-MuiButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
  >
    Long tooltip
  </button>
</div>
`;

exports[`./CustomTooltip.stories RightPlacement 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <button
    aria-label="Tooltip on right"
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary mui-style-1bi6f53-MuiButtonBase-root-MuiButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
  >
    Right placement
  </button>
</div>
`;

exports[`./CustomTooltip.stories TopPlacement 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <button
    aria-label="Tooltip on top"
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary mui-style-1bi6f53-MuiButtonBase-root-MuiButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
  >
    Top placement
  </button>
</div>
`;

exports[`./CustomTooltip.stories WithComplexContent 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedError MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorError MuiButton-root MuiButton-contained MuiButton-containedError MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorError mui-style-1doauzg-MuiButtonBase-root-MuiButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
  >
    Delete
  </button>
</div>
`;

exports[`./CustomTooltip.stories WithIcon 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <button
    aria-label="More information about this feature"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall mui-style-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-style-1dhtbeh-MuiSvgIcon-root"
      data-testid="InfoIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
      />
    </svg>
  </button>
</div>
`;
